--- a/index.html
+++ b/index.html
@@ -3,16 +3,141 @@
 <head>
 	<title>SJC Press || Breaking News</title>
 	<style type="text/css">
-		h1 {
+		body {
+      width:50%;
+      margin: auto;
+      font-family: "Arial";
+      font-size: 8pt;
+    }
+    h1 {
 			text-transform: uppercase;
+      font-size: 40pt;
 		}
+    h2 {
+			text-transform: uppercase;
+      font-family: "Helvetica";
+      font-weight: lighter;
+      font-size: 20pt;
+		}
+    h4{
+      font-size: 10pt;
+    }
+    h4.company {
+      font-size: 16pt;
+      font-family: 'Times New Roman';
+    }
+    h4.subheader {
+      font-size: 14pt;
+    }
+    h6 {
+      font-size: 10pt;
+      font-weight: lighter;
+    }
+    .header {
+      font-family: "Times New Roman";
+    }
+    .banner {
+      background-color:rgb(241, 57, 66);
+      padding: 35px;
+    }
+    .image {
+      margin: 15px;
+      float: left;
+    }
+    .news{
+      margin: 0 auto;
+      padding-left: 50px;
+    }
+
+    figcaption{
+      padding-top: 15px;
+      text-align: left;
+}
+    .imgleft {
+      float: left;
+    }
+    figure {
+      float: right;
+      background: lightgrey;
+      border: 1px darkslategrey solid;
+      padding: 15px;
+    }
 	</style>
 </head>
 <body>
 	<header>
-		<h1>SJC Press</h1>
+		<div align="center">	
+		<h1 class="header">SJC Press</h1>
+		<hr>
+		<h4 class="company">The Official Press. of St. Joseph Center</h4>
+		</div>
 	</header>
 	<article>
-	</article>
+  
+  
+    <div class="banner"><h2><font color="#ffffff">Bears Found to Speak Bear Language</font></h2>
+	<h4 class="subheader"><font color="#d6cbcb">Found to be Same Across all Bear Species</font></h4>
+  <h6>August 1, 2017 || By: Shannon Plunket</h6></article></div>
+
+<div class="news">
+    
+  <p>
+    <figure>
+      <img src="images/polar-bears-whisper.jpg" height="320px" alt="polar bears">
+      <figcaption>Polar bears having a conversation</figcaption>
+  </figure>
+
+    Phasellus malesuada massa lorem, vitae vestibulum dui finibus id. Donec nisl ante, vehicula ac eleifend sit 
+     amet, gravida ut nisl. Nunc ac elementum arcu, auctor interdum dolor. Phasellus condimentum elit eu ligula mattis, nec vulputate dolor semper. Fusce sagittis ipsum vel viverra aliquam.</p>
+  <p>Praesent quam metus, tempor vitae nulla vitae, 
+    auctor gravida metus. Mauris in dapibus ipsum. Fusce massa est, dapibus eget sapien nec, molestie tincidunt purus. Fusce tincidunt pulvinar tristique. Vestibulum luctus risus eu eros sagittis, ac rutrum nunc efficitur. Donec id quam viverra, 
+    maximus nisi a, laoreet dui. Integer interdum tristique turpis eget dapibus. Vestibulum aliquet viverra ornare.</p>
+  <h4>Etiam tempor malesuada laoreet.</h4>
+  <ul>
+    <li>Aliquam ullamcorper mi uma, quis consequat</li>
+    <li>Morbi enim velit, interdum et dolor</li>
+    <li>Ut sit amet leo laoreet, sodales</li>
+  </ul>
+
+  <p><img src="images/grizzlies-argue.jpg" class="image" height="300px" alt="grizzlies argue">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec malesuada at urna at eleifend. Phasellus vel luctus urna. Quisque id bibendum magna. Integer quis aliquam mauris. 
+    Mauris id magna vitae dui porta viverra. Donec condimentum, tellus at lobortis aliquet, erat lectus gravida tellus, a efficitur arcu eros sed nunc. Vestibulum id magna viverra, 
+    varius neque nec, bibendum lectus. Nam et metus volutpat, posuere nisl tempor, placerat dui. Sed at volutpat justo. Maecenas ac interdum turpis. Quisque ullamcorper non urna in 
+    consectetur. Phasellus a vulputate augue, eget dapibus sapien. In imperdiet eros at ex dapibus porttitor ac non augue. Morbi pretium nisl nibh, a facilisis sapien suscipit pulvinar.</p>
+
+  <p>Nunc luctus lacinia magna at mollis. Praesent ac auctor sem, quis iaculis velit. Integer tempor libero justo. Suspendisse nec dolor ligula. 
+      <figure class="img-set">
+          <img src="images/happy-bear.jpg" height="400px" alt="happy bear">
+          <figcaption>Grizzlies appear to be most social</figcaption>
+      </figure>
+    Nullam et convallis tortor. Duis consequat, 
+    justo ac elementum accumsan, ipsum diam porttitor orci, nec vehicula nisl tellus sit amet sapien. Ut tempor in neque in interdum. In non commodo metus. Donec ultricies est ac turpis rhoncus, 
+    at molestie diam pellentesque. Proin quis eros sed risus placerat convallis nec sit amet sapien. In congue, quam eget sodales venenatis, neque mi tincidunt lacus, a cursus risus sapien a orci. 
+    Nunc tempor viverra ultricies. Curabitur hendrerit risus at metus tempus, a dapibus tortor porta. Ut cursus odio quis orci viverra tincidunt. Sed eu magna nec lorem rhoncus congue eu sit amet nibh.</p>
+
+  <p>Quisque consectetur sit amet lacus vel ullamcorper. Pellentesque auctor orci nisi, non lobortis lacus malesuada in. Sed tempus malesuada eleifend. Duis ultricies tortor risus. 
+    In sagittis condimentum condimentum. Morbi condimentum sagittis mollis. Praesent nunc orci, condimentum tempor purus id, lobortis mollis mi. Quisque a ex mollis, pellentesque velit in, 
+    aliquam erat. Donec sed enim rhoncus nisi semper pharetra eget vel orci. Donec porta metus non nulla hendrerit lobortis. Vivamus viverra ex quis velit malesuada lacinia.</p>  
+
+  <p>Aliquam bibendum ut odio non ullamcorper. Aenean iaculis eu risus sed imperdiet. Quisque ut tempus massa. Duis et orci ut augue hendrerit tristique eget eget sapien. Morbi fermentum varius elit 
+    quis ultricies. Sed et quam vitae nibh mattis blandit volutpat non est. Pellentesque ultricies lacus nec ex mattis, sit amet pellentesque sapien scelerisque. Suspendisse eget nunc libero. Ut suscipit 
+    pharetra ex sed accumsan. Aliquam erat volutpat. Phasellus rhoncus dapibus elit a egestas. Aenean dapibus auctor enim, sit amet vulputate nibh accumsan sit amet. Suspendisse laoreet massa nec nibh 
+    lacinia bibendum. Ut tincidunt egestas eleifend. Sed finibus fringilla sodales.</p>
+
+  <p><img src="file:///Applications/MAMP/htdocs/news-article/images/pandas.jpg" class="image" height="300px" alt="pandas" align="left">Phasellus accumsan porta semper. Vivamus vel sagittis sem. Vestibulum eu ante in purus porttitor sodales. Nam placerat maximus aliquam. Suspendisse aliquam lacinia felis, vel ullamcorper 
+    ex dictum facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In massa lorem, vehicula quis metus et, luctus porttitor diam. Ut imperdiet, 
+    massa in iaculis maximus, nibh arcu ultricies nisi, sed auctor dui augue eu est. Praesent purus elit, consequat in venenatis sed, ullamcorper vel magna. Aliquam in massa vitae augue mollis 
+    fringilla. Sed nec aliquam urna. Vestibulum turpis ex, vestibulum sit amet nulla ut, gravida maximus arcu.</p>
+
+  <p>Cras eleifend eros nulla, eget pulvinar massa commodo et. Suspendisse volutpat, purus non dapibus maximus, urna nibh efficitur dui, ut viverra libero leo nec nisi. Curabitur nec ornare orci, 
+    ullamcorper dapibus lacus. Phasellus lorem arcu, dapibus nec iaculis vitae, pretium vitae felis. Etiam pharetra dapibus nisl sed pulvinar. Nullam ut rutrum justo, sit amet vehicula urna. 
+    Curabitur ipsum ligula, pretium in convallis non, posuere sit amet velit. Aliquam ultrices eros eget egestas eleifend. Sed eget facilisis neque. Phasellus a egestas lectus. Mauris venenatis 
+    ornare pulvinar. Sed a scelerisque risus. Nam lobortis arcu massa, nec feugiat augue interdum id. Pellentesque commodo libero at suscipit cursus. Maecenas gravida rhoncus quam vel dapibus. Nam luctus id quam eget dapibus.
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec nisi ante, mattis in aliquet ac, facilisis at lacus. Quisque finibus maximus pharetra. Quisque euismod elit id arcu convallis, nec rhoncus nibh imperdiet. 
+    Ut luctus sodales ipsum, sed pellentesque neque porttitor eu. Quisque aliquam ornare tellus, id ullamcorper ligula scelerisque vel. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent magna elit, semper et sem non, interdum tempor elit. 
+    Suspendisse rutrum ultrices urna in rutrum. Nulla ultricies libero vel imperdiet bibendum.
+  </p>
+  </div>
+  </article>
 </body>
 </html>
