--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     pharetra ex sed accumsan. Aliquam erat volutpat. Phasellus rhoncus dapibus elit a egestas. Aenean dapibus auctor enim, sit amet vulputate nibh accumsan sit amet. Suspendisse laoreet massa nec nibh 
     lacinia bibendum. Ut tincidunt egestas eleifend. Sed finibus fringilla sodales.</p>
 
-  <p><img src="file:///Applications/MAMP/htdocs/news-article/images/pandas.jpg" class="image" height="300px" alt="pandas" align="left">Phasellus accumsan porta semper. Vivamus vel sagittis sem. Vestibulum eu ante in purus porttitor sodales. Nam placerat maximus aliquam. Suspendisse aliquam lacinia felis, vel ullamcorper 
+  <p><img src="images/pandas.jpg" class="image" height="300px" alt="pandas" align="left">Phasellus accumsan porta semper. Vivamus vel sagittis sem. Vestibulum eu ante in purus porttitor sodales. Nam placerat maximus aliquam. Suspendisse aliquam lacinia felis, vel ullamcorper 
     ex dictum facilisis. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; In massa lorem, vehicula quis metus et, luctus porttitor diam. Ut imperdiet, 
     massa in iaculis maximus, nibh arcu ultricies nisi, sed auctor dui augue eu est. Praesent purus elit, consequat in venenatis sed, ullamcorper vel magna. Aliquam in massa vitae augue mollis 
     fringilla. Sed nec aliquam urna. Vestibulum turpis ex, vestibulum sit amet nulla ut, gravida maximus arcu.</p>
